# notmuch-neomutt

./: .gitattributes  README.md  notmuch_neomutt.py  pyproject.toml  update-readme.sh
maintainer-scripts/: update-readme
